--- a/package.json
+++ b/package.json
@@ -1,7 +1,7 @@
 {
   "name": "array-splice",
-  "version": "0.0.1",
-  "private": true,
+  "version": "0.1",
+  "private": false,
   "scripts": {
   },
   "dependencies": {
